# knative-serving-wasm

./: .codecov.yaml  .env  .gitignore  .golangci.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum  goyek  goyek.ps1
.github/scripts/: cleanup-e2e-images.sh
.github/workflows/: e2e-kind.yaml  goyek.yaml  knative-go-build.yaml  knative-go-test.yaml  knative-style.yaml  knative-verify.yaml  release.yaml
cmd/controller/: main.go
cmd/schema/: main.go
config/: 100-namespace.yaml  200-clusterrole.yaml  200-role.yaml  200-serviceaccount.yaml  201-clusterrolebinding.yaml  201-rolebinding.yaml  300-wasmmodule.yaml  config-leader-election.yaml  config-logging.yaml  config-observability.yaml  config-runner.yaml  controller.yaml
docs/design/: shared-runner-architecture.md
examples/manifests/: wasm-module.yaml
examples/modules/http-fetch/: Cargo.toml
examples/modules/http-fetch/src/: lib.rs
examples/modules/reverse-text/: Cargo.toml
examples/modules/reverse-text/src/: lib.rs
hack/: add-boilerplate.sh  release.sh  tools.go  update-codegen.sh  update-deps.sh  verify-codegen.sh
pkg/apis/wasm/: register.go
pkg/apis/wasm/v1alpha1/: doc.go  register.go  register_test.go  (+6 more)
pkg/reconciler/wasmmodule/: controller.go  reconciler_test.go  runner_config.go  runner_config_test.go  wasmmodule.go  wasmmodule_test.go
runner/: Cargo.toml  Dockerfile
runner/src/: config.rs  main.rs  network.rs  oci.rs  server.rs
test/: e2e-tests.sh  presubmit-tests.sh
test/e2e/: clients.go  config.go  helpers.go  main_test.go  network_test.go  runner.sh  wasmmodule_test.go
test/util/k8s/: avail.go
(+35 files in other folders)
