[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "27.0"
wasmtime-wasi = { version = "27.0" }
wasmtime-wasi-http = "27.0"
anyhow = "1.0"
oci-distribution = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
