[package]
name = "reverse-text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
querystring = "1.1"
urlencoding = "2.1"

[dependencies.wasi]
version = "0.13.3+wasi-0.2.2"

[lib]
crate-type = ["cdylib"]
